@@ -3,12 +3,10 @@ package xjs.compat.serialization.parser;
 import org.jetbrains.annotations.NotNull;
 import xjs.core.JsonString;
 import xjs.core.JsonValue;
-import xjs.core.StringType;
 import xjs.serialization.parser.ValueParser;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
 /**
@@ -18,7 +16,7 @@ public class TxtParser implements ValueParser {
     private final String text;
 
     public TxtParser(final File file) throws IOException {
-        this(new String(Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8));
+        this(Files.readString(file.toPath()));
     }
 
     public TxtParser(final String text) {
